# vibamix

firmware/peripherals/epd/: CMakeLists.txt
firmware/peripherals/epd/epaper_display/: Ap_29demo.h  Display_EPD_W21.cpp  Display_EPD_W21.h  Display_EPD_W21_spi.cpp  Display_EPD_W21_spi.h
firmware/scripts/: open_nrf54l15_jlink.bash
firmware/vibamix/: CMakeLists.txt  prj.conf
firmware/vibamix/boards/pants_for_birds/vibamix_xiao/: board.yml  vibamix_xiao-pinctrl.dtsi  vibamix_xiao_nrf54l15_cpuapp.dts  vibamix_xiao_nrf54l15_cpuflpr.dts  vibamix_xiao_nrf54l15_cpuflpr_xip.dts  vibamix_xiao_nrf54l15_cpuflpr_xip.yaml
firmware/vibamix/src/: main.cpp
firmware/vibamix_zephyr/: CMakeLists.txt  prj.conf
firmware/vibamix_zephyr/boards/pants_for_birds/vibamix_xiao/: Kconfig.vibamix_xiao  board.cmake  vibamix_xiao-pinctrl.dtsi  vibamix_xiao_nrf54l15_cpuapp.dts  vibamix_xiao_nrf54l15_cpuapp.yaml  vibamix_xiao_nrf54l15_cpuflpr.yaml
firmware/vibamix_zephyr/boards/pants_for_birds/vibamix_xiao/support/: openocd.cfg  probe-rs-wrapper
firmware/vibamix_zephyr/dts/bindings/display/: pants-for-birds,epaper.yaml
firmware/vibamix_zephyr/src/: main.cpp
kicad/: .gitignore
kicad/vibamix/: panel.json  vibamix.kicad_pcb  vibamix.kicad_pro  vibamix.kicad_sch
kicad/vibamix_xiao/: fp-lib-table  impedance_control.xlsx  panel.json  vibamix_xiao.kicad_pcb  vibamix_xiao.kicad_pro  vibamix_xiao.kicad_sch
reference/PCA10156-nRF54L15-DK 1_0_0/Production files/BOM/: PCA10156_BOM_Web.xls
